# opencv_transforms

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TEST_PLAN.md  UPDATE.md  benchmark.py  benchmark_simple.py  benchmarking_v2.ipynb  dataframe_schema.md  debug_hue.py  debug_hue_simple.py  debug_rotation.py  debug_rotation_detailed.py  debug_rotation_interpolation.py  debug_rotation_random.py  debug_rotation_tolerance.py  multi_size_benchmark_results.csv  opencv_functional.py  opencv_transforms.py  pyproject.toml  setup.py  transform_list.md
debug/: .ruff.toml  README.md  __init__.py  debug_arrays.py  debug_blend_formula.py  debug_contrast.py  debug_contrast_computation.py  debug_contrast_real.py  debug_contrast_test.py  debug_contrast_visually.py  debug_contrast_zero.py  debug_exact_computation.py  debug_pil_contrast.py  debug_pil_identity.py  debug_pil_precision.py  debug_pil_real_image.py  debug_rotation.py  debug_specific_value.py  debug_test_setup.py  debug_utils.py  final_debug.py  investigate_coordinate_offset.py  show_fix_comparison.py  test_contrast_directly.py
opencv_transforms/: functional.py  opencv_functional.py  opencv_transforms.py  transforms.py
opencv_transforms/debug/: __init__.py  dataset_utils.py  utils.py  visualization.py
scripts/: debug_random_resized_crop.py  debug_rotation.py
tests/: compare_to_pil_for_testing.ipynb  conftest.py  setup_testing_directory.py  test_benchmark.py  test_color.py  test_core.py  test_csv_export.py  test_data_loading.py  test_functional_affine.py  test_multi_panel_viz.py  test_multi_size_benchmark.py  test_random_affine.py  test_random_apply.py  test_random_transforms.py  test_spatial.py  utils.py
